[REFACTOR] Fix overall structure of the project and integration with sonarcloud